--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -30,7 +30,7 @@
         android:layout_marginBottom="50dp"
         android:layout_marginStart="150dp"
         android:textColor="@color/white"
-        android:visibility="gone"
+        android:visibility="visible"
         android:gravity="center"
         android:text="@string/start_button"/>
 
