--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,10 +3,13 @@
     <color name="purple_200">#FFBB86FC</color>
     <color name= "laranja">#ff5f00</color>
     <color name="vermelho_escuro">#660000</color>
+    <color name="cinza">#F5F5F5</color>
+    <color name="hintTextColor">#858585</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="transparent">#00FFFFFF</color>
 </resources>
