--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -8,6 +8,7 @@
     tools:context=".SplashActivity">
 
     <ImageView
+        android:id="@+id/bike_image"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:src="@drawable/bg_splash" />
@@ -27,8 +28,9 @@
         android:background="@drawable/btn_bg"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        android:layout_marginBottom="50dp"
         android:layout_marginStart="150dp"
+        android:layout_marginBottom="40dp"
+        android:layout_gravity="center"
         android:textColor="@color/white"
         android:visibility="visible"
         android:gravity="center"
