--- a/app/src/main/res/layout/item_rv_main_category.xml
+++ b/app/src/main/res/layout/item_rv_main_category.xml
@@ -36,7 +36,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentBottom="true"
-                android:fontFamily="@font/Gilroy-bold"
+                android:fontFamily="@font/gilroy_bold"
                 android:maxEms="10"
                 android:maxLines="2"
                 android:padding="10sp"
