--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -35,14 +35,14 @@
         android:text="@string/start_button"/>
 
     <ProgressBar
+        android:id="@+id/loader"
         android:layout_width="20dp"
         android:layout_height="20dp"
-        android:layout_gravity="center"
-        android:outlineAmbientShadowColor="@color/vermelho_escuro"
-        android:id="@+id/loader"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        android:layout_marginBottom="50dp"
-        android:layout_marginStart="150dp"/>
+        android:layout_alignParentBottom="true"
+        android:layout_gravity="center"
+        android:layout_marginStart="200dp"
+        android:layout_marginBottom="20dp"
+        android:outlineAmbientShadowColor="@color/vermelho_escuro" />
 
 </RelativeLayout>
