--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -20,7 +20,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Todas as Receitas"
+                android:text="Categorias"
                 android:textSize="20sp"
                 android:textColor="@color/black"
                 android:fontFamily="@font/gilroy_bold"
@@ -60,7 +60,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Categoria"
+                android:text="Receitas"
                 android:textSize="15sp"
                 android:textColor="@color/black"
                 android:fontFamily="@font/gilroy_bold"
